--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
 	"main": "index.js",
 	"dependencies": {
-    "express": "4.16.4",
+		"express": "4.16.4",
 		"body-parser": "^1.18.3",
 		"socket.io": "2.2.0",
 		"short-id": "0.1.0-1",
-		"ordinal": "1.0.2"
-    "sendbird": "^3.0.92",
-    "snoowrap": "^1.15.2",
+		"ordinal": "1.0.2",
+		"sendbird": "^3.0.92",
+		"snoowrap": "^1.15.2"
 	}
 }
